charts/clabernetes/tests/clicker_enabled/test-fixtures/golden/deployment.yaml
---
# Source: clabernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clabernetes-plus-clicker-manager
  namespace: clabernetes
  labels:
    chart: "clabernetes-0.0.0"
    release: release-name
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-plus-clicker-manager"
    c9s.run/app: clabernetes-plus-clicker
    c9s.run/name: "clabernetes-plus-clicker-manager"
    c9s.run/component: manager
    anotherlabel: anotherlabelvalue
    somelabel: somelabelvalue
  annotations:
    annotherannotation: anotherannotationvalue
    someannotation: someannotationvalue
spec:
  selector:
    matchLabels:
      c9s.run/app: clabernetes-plus-clicker
      release: release-name
      c9s.run/component: manager
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        chart: "clabernetes-0.0.0"
        release: release-name
        heritage: Helm
        revision: "1"
        app.kubernetes.io/name: "clabernetes-plus-clicker-manager"
        c9s.run/app: clabernetes-plus-clicker
        c9s.run/name: "clabernetes-plus-clicker-manager"
        c9s.run/component: manager
        anotherlabel: anotherlabelvalue
        somelabel: somelabelvalue
      annotations:
        annotherannotation: anotherannotationvalue
        someannotation: someannotationvalue
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    c9s.run/app: clabernetes-plus-clicker
                    c9s.run/name: "clabernetes-plus-clicker-manager"
                    c9s.run/component: manager
                topologyKey: kubernetes.io/hostname
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    c9s.run/app: clabernetes-plus-clicker
                    c9s.run/name: "clabernetes-plus-clicker-manager"
                    c9s.run/component: manager
                topologyKey: topology.kubernetes.io/zone
      terminationGracePeriodSeconds: 10
      serviceAccountName: "clabernetes-plus-clicker-service-account"
      initContainers:
        - name: init
          image: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
          imagePullPolicy: IfNotPresent
          command: ["/clabernetes/manager", "run", "--initializer"]
          env:
            - name: APP_NAME
              value: clabernetes-plus-clicker
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: CLIENT_OPERATION_TIMEOUT_MULTIPLIER
              value: "1"
            - name: MANAGER_LOGGER_LEVEL
              value: info
            - name: CONTROLLER_LOGGER_LEVEL
              value: info
            - name: NODE_RUNTIME_IMAGE
              value: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
            - name: PLANNER_POOL_ENABLED
              value: "true"
            - name: C9S_DIAGNOSTICS
              value: "false"
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
      containers:
        - name: manager
          image: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
          imagePullPolicy: IfNotPresent
          command: ["/clabernetes/manager", "run"]
          env:
            - name: APP_NAME
              value: clabernetes-plus-clicker
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: CLIENT_OPERATION_TIMEOUT_MULTIPLIER
              value: "1"
            - name: MANAGER_LOGGER_LEVEL
              value: info
            - name: CONTROLLER_LOGGER_LEVEL
              value: info
            - name: NODE_RUNTIME_IMAGE
              value: "ghcr.io/clabernetes/clabernetes/clabernetes-manager:dev-latest"
            - name: PLANNER_POOL_ENABLED
              value: "true"
            - name: C9S_DIAGNOSTICS
              value: "false"
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
          ports:
          - name: http
            containerPort: 10443
          livenessProbe:
            httpGet:
              path: /alive
              port: 10443
              scheme: HTTP
            successThreshold: 1
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /alive
              port: 10443
              scheme: HTTP
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
