charts/clabernetes/tests/clicker_enabled/test-fixtures/golden/ingress.yaml
---
# Source: clabernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clabernetes-plus-clicker-ui
  namespace: clabernetes
  labels:
    chart: "clabernetes-0.0.0"
    release: release-name
    heritage: Helm
    revision: "1"
    app.kubernetes.io/name: "clabernetes-plus-clicker-ui"
    clabernetes/app: clabernetes-plus-clicker
    clabernetes/name: "clabernetes-plus-clicker-ui"
    clabernetes/component: ui
    anotherlabel: anotherlabelvalue
    somelabel: somelabelvalue
  annotations:
    kubernetes.io/ingress.class: nginx
    annotherannotation: anotherannotationvalue
    someannotation: someannotationvalue
spec:
  ingressClassName: nginx
  rules:
    - host: ui.clabernetes.containerlab.dev
      http:
        paths:
          - backend:
              service:
                name: clabernetes-plus-clicker-ui
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
