charts/clabernetes/tests/clicker_enabled/test-fixtures/golden/service.yaml
---
# Source: clabernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clabernetes-plus-clicker-http
  namespace: clabernetes
  labels:
    chart: "clabernetes-0.0.0"
    release: release-name
    heritage: Helm
    revision: "1"
    c9s.run/app: clabernetes-plus-clicker
    c9s.run/name: "clabernetes-plus-clicker-manager"
    c9s.run/component: manager-http
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 10443
  selector:
    c9s.run/app: clabernetes-plus-clicker
    c9s.run/name: "clabernetes-plus-clicker-manager"
    c9s.run/component: manager
